# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chrome_build.gni")

source_set("user_signin") {
  configs += [ "//build/config/compiler:enable_arc" ]
  sources = [
    "user_signin_coordinator.h",
    "user_signin_coordinator.mm",
    "user_signin_view_controller.h",
    "user_signin_view_controller.mm",
  ]
  deps = [
    "//ios/chrome/app/strings",
    "//ios/chrome/browser/ui/authentication/unified_consent",
    "//ios/chrome/browser/ui/collection_view/cells",
    "//ios/chrome/browser/ui/util",
    "//ios/chrome/common/ui/colors",
    "//ios/chrome/common/ui/util",
    "//ui/base",
  ]
  public_deps =
      [ "//ios/chrome/browser/ui/authentication/signin:signin_headers" ]
}
